In Progress - Government 360 - Building Permit

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -103,12 +103,92 @@
                     <div class="tab-pane" id="BuildingPermit">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabName="BuildingPermit" tabUrl="BuildingPermitProfile"></div>
+                                <div class="box box-warning">
+                                    <div class="box-header with-border">
+                                        <h3 class="box-title">Building Permit</h3>
+                                        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                                            <button type="button" class="btn btn-default pull-right RealEstateBuildingPermitUI_btnNewRealEstate"><i
+                                                    class="fa fa-plus"></i> New Building Permit</button>
+                                        </div>
+                                    </div>
+                                    <!-- /.box-header -->
+                                    <div class="box-body">
+                                        <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileMain"></div>
+                                        <div class="nav-tabs-custom" style="margin-top: 5px;">
+                                            <ul class="nav nav-tabs">
+                                                <li class="tab-pane active">
+                                                    <a href="#BuildingPermitBox1" data-toggle="tab" aria-expanded="false">Box 1 (Engr)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox2" data-toggle="tab" aria-expanded="true">Box 2 (Recording)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox3" data-toggle="tab" aria-expanded="true">Box 3 (Engr/Section)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox4" data-toggle="tab" aria-expanded="true">Box 4 (Section)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox5" data-toggle="tab" aria-expanded="true">Box 5 (Section)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox6" data-toggle="tab" aria-expanded="true">Box 6 (Engr)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox7" data-toggle="tab" aria-expanded="true">Box 7 (Engr)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox8" data-toggle="tab" aria-expanded="true">Box 8 (Applicant)</a>
+                                                </li>
+                                                <li class="tab-pane">
+                                                    <a href="#BuildingPermitBox9" data-toggle="tab" aria-expanded="true">Box 9 (Owner)</a>
+                                                </li>
+                                            </ul>
+                                            <div class="tab-content no-padding">
+                                                <div class="tab-pane active" id="BuildingPermitBox1">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox1"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox2">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox2"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox3">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox3"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox4">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox4"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox5">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox5"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox6">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox6"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox7">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox7"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox8">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox8"></div>
+                                                </div>
+                                                <div class="tab-pane" id="BuildingPermitBox9">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox9"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- /.box-body -->
+                                    <div class="box-footer">
+                                        <button type="button" class="btn btn-default">Cancel</button>
+                                        <button type="button" class="btn btn-info pull-right btnSaveRealEstateBuildingPermit">Save Building Permit</button>
+                                    </div>
+                                </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="BuildingPermit" tabUrl="SearchBuildingPermit"></div>
                             </div>
                         </div>
+
+
+
                     </div>
                     <div class="tab-pane" id="ElectricalPermit">
                         <div style="display: flex; background: #ecf0f5;">
