In Progress - Government 360 - UI for Building Permit

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -132,16 +132,10 @@
                                                     <a href="#BuildingPermitBox5" data-toggle="tab" aria-expanded="true">Box 5 (Section)</a>
                                                 </li>
                                                 <li class="tab-pane">
-                                                    <a href="#BuildingPermitBox6" data-toggle="tab" aria-expanded="true">Box 6 (Engr)</a>
+                                                    <a href="#BuildingPermitBox6" data-toggle="tab" aria-expanded="true">Box 6 (Architect/Civil/Applicant/Owner)</a>
                                                 </li>
                                                 <li class="tab-pane">
-                                                    <a href="#BuildingPermitBox7" data-toggle="tab" aria-expanded="true">Box 7 (Engr)</a>
-                                                </li>
-                                                <li class="tab-pane">
-                                                    <a href="#BuildingPermitBox8" data-toggle="tab" aria-expanded="true">Box 8 (Applicant)</a>
-                                                </li>
-                                                <li class="tab-pane">
-                                                    <a href="#BuildingPermitBox9" data-toggle="tab" aria-expanded="true">Box 9 (Owner)</a>
+                                                    <a href="#BuildingPermitBoxAttachment" data-toggle="tab" aria-expanded="true">Attachment</a>
                                                 </li>
                                             </ul>
                                             <div class="tab-content no-padding">
@@ -163,14 +157,8 @@
                                                 <div class="tab-pane" id="BuildingPermitBox6">
                                                     <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox6"></div>
                                                 </div>
-                                                <div class="tab-pane" id="BuildingPermitBox7">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox7"></div>
-                                                </div>
-                                                <div class="tab-pane" id="BuildingPermitBox8">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox8"></div>
-                                                </div>
-                                                <div class="tab-pane" id="BuildingPermitBox9">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox9"></div>
+                                                <div class="tab-pane" id="BuildingPermitBoxAttachment">
+                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBoxAttachment"></div>
                                                 </div>
                                             </div>
                                         </div>
