--- a/displaytabs/tabs/GovernmentUI/BuildingPermitProfileBox1.html
+++ b/displaytabs/tabs/GovernmentUI/BuildingPermitProfileBox1.html
@@ -1,5 +1,5 @@
 <div style="display: flex; flex: 100%; margin-left: 15px; margin-right: 15px;">
-    <div class="box box-primary">
+    <div class="box box-default">
         <div class="box-header with-border">
           <h3 class="box-title">Box 1 (For Architect / Civil Engineer in Print)</h3>
         </div>
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
-            <div class="box box-primary">
+            <div class="box box-default">
                 <div class="box-header with-border">
                   <h3 class="box-title">Scope of Work</h3>
                 </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="box-body" style="display: flex; flex-wrap: wrap;">
-            <div class="box box-primary">
+            <div class="box box-default">
                 <div class="box-header with-border">
                   <h3 class="box-title">Use or Type of Occupancy</h3>
                 </div>
