--- a/displaytabs/tabs/GovernmentUI/BuildingPermitProfileBox2.html
+++ b/displaytabs/tabs/GovernmentUI/BuildingPermitProfileBox2.html
@@ -1,41 +1,35 @@
 <div style="display: flex; flex: 100%; margin-left: 15px; margin-right: 15px;">
-    <div class="box box-primary">
+    <div class="box box-default">
         <div class="box-header with-border">
           <h3 class="box-title">Box 1 (For Receiving & Recording Section)</h3>
         </div>
-        <div class="box-body" style="display: flex; flex-wrap: wrap;">
-            <div class="box box-primary">
-                <div class="box-header with-border">
-                  <h3 class="box-title">Building Documents (Five Sets Each)</h3>
+        <div class="box-body">
+            <label style="font-size: 15px;">Building Documents (Five Sets Each)</label>
+            <div style="display: flex; flex-direction: column;">
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Site Development and Location
                 </div>
-                <div class="box-body">
-                    <div style="display: flex; flex-direction: column;">
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Site Development and Location
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Architectural Plans & Specifications
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Structural Designs & Specifications
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Sanitary / Plumbing Plans & Specifications
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Electrical Plans & Specifications
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Mechanical Plans & Specifications
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Logbook (1 copy)
-                        </div>
-                        <div style="display: flex;">
-                            <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
-                            <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
-                        </div>
-                    </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Architectural Plans & Specifications
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Structural Designs & Specifications
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Sanitary / Plumbing Plans & Specifications
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Electrical Plans & Specifications
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Mechanical Plans & Specifications
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Logbook (1 copy)
+                </div>
+                <div style="display: flex;">
+                    <input type="checkbox" style="margin: 5px;"> Others&nbsp;(Specify)
+                    <input type="text" style="margin: 5px; margin-top: 0px;" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI" name="assessedAmount">
                 </div>
             </div>
         </div>
