--- a/sample.html
+++ b/sample.html
@@ -1,72 +1,75 @@
-<div class="box box-success">
-    <div class="box-header ui-sortable-handle" style="cursor: move;">
-        <i class="fa fa-comments-o"></i>
-
-        <h3 class="box-title">Chat</h3>
-
-        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <div class="btn-group" data-toggle="btn-toggle">
-                <button type="button" class="btn btn-default btn-sm active"><i class="fa fa-square text-green"></i>
-                </button>
-                <button type="button" class="btn btn-default btn-sm"><i class="fa fa-square text-red"></i></button>
-            </div>
-        </div>
-    </div>
-    <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
-        <div class="box-body chat" id="chat-box" style="overflow: hidden; width: auto; height: 250px;">
-            <div class="item">
-                <img src="dist/img/user4-128x128.jpg" alt="user image" class="online">
-
-                <p class="message">
-                    <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
-                        Mike Doe
-                    </a>
-                    I would like to meet you to discuss the latest news about
-                    the arrival of the new theme. They say it is going to be one the
-                    best themes on the market
-                </p>
-                <div class="attachment">
-                    <h4>Attachments:</h4>
-
-                    <p class="filename">
-                        Theme-thumbnail-image.jpg
-                    </p>
-
-                    <div class="pull-right">
-                        <button type="button" class="btn btn-primary btn-sm btn-flat">Open</button>
+<div class="tab-pane" id="PlumbingPermit">
+    <div style="display: flex; background: #ecf0f5;">
+        <div style="flex: 75%; margin: 15px 0px;">
+            <div class="box box-warning">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Plumbing Permit</h3>
+                    <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+                        <button type="button" class="btn btn-default pull-right RealEstatePlumbingPermitUI_btnNewRealEstate"><i
+                                class="fa fa-plus"></i> New Plumbing Permit</button>
                     </div>
                 </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileMain"></div>
+                    <div class="nav-tabs-custom" style="margin-top: 5px;">
+                        <ul class="nav nav-tabs">
+                            <li class="tab-pane active">
+                                <a href="#PlumbingPermitBox1" data-toggle="tab" aria-expanded="false">Box 1 (Engr)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBox2" data-toggle="tab" aria-expanded="true">Box 2 (Recording)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBox3" data-toggle="tab" aria-expanded="true">Box 3 (Engr/Section)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBox4" data-toggle="tab" aria-expanded="true">Box 4 (Section)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBox5" data-toggle="tab" aria-expanded="true">Box 5 (Section)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBox6" data-toggle="tab" aria-expanded="true">Box 6 (Architect/Civil/Applicant/Owner)</a>
+                            </li>
+                            <li class="tab-pane">
+                                <a href="#PlumbingPermitBoxAttachment" data-toggle="tab" aria-expanded="true">Attachment</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content no-padding">
+                            <div class="tab-pane active" id="PlumbingPermitBox1">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox1"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBox2">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox2"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBox3">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox3"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBox4">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox4"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBox5">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox5"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBox6">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox6"></div>
+                            </div>
+                            <div class="tab-pane" id="PlumbingPermitBoxAttachment">
+                                <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBoxAttachment"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    <button type="button" class="btn btn-default">Cancel</button>
+                    <button type="button" class="btn btn-info pull-right btnSaveRealEstatePlumbingPermit">Save Plumbing Permit</button>
+                </div>
             </div>
-            <div class="item">
-                <img src="dist/img/user3-128x128.jpg" alt="user image" class="offline">
-
-                <p class="message">
-                    <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
-                        Alexander Pierce
-                    </a>
-                    I would like to meet you to discuss the latest news about
-                    the arrival of the new theme. They say it is going to be one the
-                    best themes on the market
-                </p>
-            </div>
-            <!-- /.item -->
-            <!-- chat item -->
-            <div class="item">
-                <img src="dist/img/user2-160x160.jpg" alt="user image" class="offline">
-
-                <p class="message">
-                    <a href="#" class="name">
-                        <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
-                        Susan Doe
-                    </a>
-                    I would like to meet you to discuss the latest news about
-                    the arrival of the new theme. They say it is going to be one the
-                    best themes on the market
-                </p>
-            </div>
-            <!-- /.item -->
+        </div>
+        <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
+            <div class="DisplayTabCommon" tabName="PlumbingPermit" tabUrl="SearchPlumbingPermit"></div>
         </div>
     </div>
 </div>
